fixed flicker-doom

--- a/style.css
+++ b/style.css
@@ -64,15 +64,16 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	will-change: opacity, height, width;
 	opacity: 0;
+	cursor: pointer;
 }
 
-.card__img:hover ~ .card__view-icon {
+.card__img-view-icon:hover .card__view-icon {
 	opacity: 1;
 	width: 100%;
 	height: 100%;
-	z-index: 10;
-	cursor: pointer;
+	z-index: 99;
 }
 
 /* Card information */
